# KIV-ZOS-2019

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  allocation.c  allocation.h  bitmap.c  bitmap.h  bool.h  commands  commands.c  commands.h  debug.c  debug.h  directory.c  directory.h  file.c  file.h  inode.c  inode.h  main.c  parsing.c  parsing.h  shell.c  shell.h  structure.c  structure.h  superblock.c  superblock.h  symlink.c  symlink.h  test.dat.REMOVED.git-id  vfs_io.c  vfs_io.h
docs/: clean.bat  compile.bat  compile.sh  zos.tex
